--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "lucide-react": "^0.553.0",
     "next": "16.0.1",
     "next-auth": "^4.24.13",
+    "pino": "^10.1.0",
+    "pino-pretty": "^13.1.2",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-hook-form": "^7.66.0",
